<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editEmailCreate"
                style="@style/NasEditText"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.032" />

            <EditText
                android:id="@+id/editPassword"
                style="@style/NasEditText"
                android:hint="@string/sifra"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="@+id/editEmailCreate"
                app:layout_constraintTop_toBottomOf="@+id/editEmailCreate" />

            <EditText
                android:id="@+id/editConfirmPassword"
                style="@style/NasEditText"
                android:hint="@string/potvrdite_sifru"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="@+id/editPassword"
                app:layout_constraintTop_toBottomOf="@+id/editPassword" />

            <EditText
                android:id="@+id/editIme"
                style="@style/NasEditText"
                android:hint="@string/ime"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/editConfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword" />

            <EditText
                android:id="@+id/editPrezime"
                style="@style/NasEditText"
                android:hint="@string/prezime"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/editIme"
                app:layout_constraintTop_toBottomOf="@+id/editIme" />

            <EditText
                android:id="@+id/editTelefon"
                style="@style/NasEditText"
                android:hint="@string/telefon"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="@+id/editPrezime"
                app:layout_constraintTop_toBottomOf="@+id/editPrezime" />

            <EditText
                android:id="@+id/editNazivFirme"
                style="@style/NasEditText"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                android:hint="@string/naziv_firme"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/editTelefon"
                app:layout_constraintTop_toBottomOf="@+id/checkFirma" />

            <CheckBox
                android:id="@+id/checkFirma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/firma"
                app:layout_constraintStart_toStartOf="@+id/editTelefon"
                app:layout_constraintTop_toBottomOf="@+id/editTelefon" />

            <Button
                android:id="@+id/btnCreateAccount"
                style="@style/EntryButton"
                android:layout_marginTop="16dp"
                android:text="@string/registruj_se"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editNazivFirme" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>